--- a/Lab 3 - DAAD-ML - Anastasiia Matychenko.ipynb
+++ b/Lab 3 - DAAD-ML - Anastasiia Matychenko.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "data_url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/abalone/abalone.data\"\n",
     "column_names = [\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole_weight\", \"Shucked_weight\",\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,25 +97,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Linear Regression:\n",
-      "Train R2 Score: 0.5264768075017208\n",
-      "Test R2 Score: 0.5323381317508206\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LinearRegression"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -124,9 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linear_regression = LinearRegression()\n",
     "linear_regression.fit(X_train, y_train)"
@@ -142,9 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression:\n",
+      "Train R2 Score: 0.5264768075017208\n",
+      "Test R2 Score: 0.5323381317508206\n"
+     ]
+    }
+   ],
    "source": [
     "y_train_pred = linear_regression.predict(X_train)\n",
     "y_test_pred = linear_regression.predict(X_test)\n",
@@ -156,31 +159,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Для другої моделі, будемо використовувати лінійну багатовимірну регресію на основі логарифмованих показників"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Linear Regression (Log-transformed features):\n",
-      "Train R2 Score: 0.5565330991838986\n",
-      "Test R2 Score: 0.5371670404236369\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,13 +222,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_log = data_log.drop(\"Rings\", axis=1)\n",
     "y_log = data_log[\"Rings\"]\n",
     "X_train_log, X_test_log, y_train_log, y_test_log = train_test_split(X_log, y_log, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
    ]
   },
   {
@@ -249,9 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linear_regression_log = LinearRegression()\n",
     "linear_regression_log.fit(X_train_log, y_train_log)"
@@ -267,9 +279,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Linear Regression (Log-transformed features):\n",
+      "Train R2 Score: 0.5565330991838986\n",
+      "Test R2 Score: 0.5371670404236369\n"
+     ]
+    }
+   ],
    "source": [
     "y_train_pred_log = linear_regression_log.predict(X_train_log)\n",
     "y_test_pred_log = linear_regression_log.predict(X_test_log)\n",
@@ -290,20 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Linear Regression (Polynomial Features):\n",
-      "Train R2 Score: 0.5847256764841892\n",
-      "Test R2 Score: 0.549572348589771\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures"
    ]
@@ -318,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,9 +349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "linear_regression_poly = LinearRegression()\n",
     "linear_regression_poly.fit(X_train_poly, y_train_poly)"
@@ -355,9 +378,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Linear Regression (Polynomial Features):\n",
+      "Train R2 Score: 0.5847256764841892\n",
+      "Test R2 Score: 0.549572348589771\n"
+     ]
+    }
+   ],
    "source": [
     "y_train_pred_poly = linear_regression_poly.predict(X_train_poly)\n",
     "y_test_pred_poly = linear_regression_poly.predict(X_test_poly)\n",
@@ -378,20 +412,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Random Forest Regression:\n",
-      "Train R2 Score: 0.9386289073954626\n",
-      "Test R2 Score: 0.5296671259326307\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor"
    ]
@@ -406,9 +429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(random_state=42)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random_forest = RandomForestRegressor(random_state=42)\n",
     "random_forest.fit(X_train, y_train)"
@@ -424,9 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Random Forest Regression:\n",
+      "Train R2 Score: 0.9386289073954626\n",
+      "Test R2 Score: 0.5296671259326307\n"
+     ]
+    }
+   ],
    "source": [
     "y_train_pred_rf = random_forest.predict(X_train)\n",
     "y_test_pred_rf = random_forest.predict(X_test)\n",
@@ -439,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
