--- a/Lab 3 - DAAD-ML - Anastasiia Matychenko.ipynb
+++ b/Lab 3 - DAAD-ML - Anastasiia Matychenko.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_encoder = LabelEncoder()\n",
-    "data[\"Sex\"] = label_encoder.fit_transform(data[\"Sex\"])"
+    "data = pd.get_dummies(data, columns=[\"Sex\"])"
    ]
   },
   {
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +114,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,8 +142,8 @@
      "output_type": "stream",
      "text": [
       "Linear Regression:\n",
-      "Train R2 Score: 0.5264768075017208\n",
-      "Test R2 Score: 0.5323381317508206\n"
+      "Train R2 Score: 0.5348243545188456\n",
+      "Test R2 Score: 0.5481628137889278\n"
      ]
     }
    ],
@@ -176,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +240,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -270,8 +269,8 @@
      "text": [
       "\n",
       "Linear Regression (Log-transformed features):\n",
-      "Train R2 Score: 0.5565330991838986\n",
-      "Test R2 Score: 0.5371670404236369\n"
+      "Train R2 Score: 0.5601140652605556\n",
+      "Test R2 Score: 0.5472543193597537\n"
      ]
     }
    ],
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +339,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -369,8 +368,8 @@
      "text": [
       "\n",
       "Linear Regression (Polynomial Features):\n",
-      "Train R2 Score: 0.5847256764841892\n",
-      "Test R2 Score: 0.549572348589771\n"
+      "Train R2 Score: 0.592424540641986\n",
+      "Test R2 Score: 0.553717729578594\n"
      ]
     }
    ],
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +419,7 @@
        "RandomForestRegressor(random_state=42)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -449,8 +448,8 @@
      "text": [
       "\n",
       "Random Forest Regression:\n",
-      "Train R2 Score: 0.9386289073954626\n",
-      "Test R2 Score: 0.5296671259326307\n"
+      "Train R2 Score: 0.938883555729775\n",
+      "Test R2 Score: 0.5298623219859746\n"
      ]
     }
    ],
@@ -466,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -475,10 +474,10 @@
      "text": [
       "\n",
       "Test R2 Scores:\n",
-      "Linear Regression: 0.5323381317508206\n",
-      "Linear Regression (Log-transformed features): 0.5371670404236369\n",
-      "Linear Regression (Polynomial Features): 0.549572348589771\n",
-      "Random Forest Regression: 0.5296671259326307\n"
+      "Linear Regression: 0.5481628137889278\n",
+      "Linear Regression (Log-transformed features): 0.5472543193597537\n",
+      "Linear Regression (Polynomial Features): 0.553717729578594\n",
+      "Random Forest Regression: 0.5298623219859746\n"
      ]
     }
    ],
@@ -492,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +501,7 @@
       "\n",
       "Best Model on Test Set:\n",
       "Model: Linear Regression (Polynomial Features)\n",
-      "Test R2 Score: 0.549572348589771\n"
+      "Test R2 Score: 0.553717729578594\n"
      ]
     }
    ],
